--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "vite-portfolio",
+  "name": "chong-kok-yang-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:links": "node test-links.mjs"
+    "setup": "node scripts/setup.js",
+    "test:links": "node test-links.mjs",
+    "test:gemini": "node test-gemini-models.js"
   },
   "dependencies": {
-    "@google/genai": "^1.23.0",
+    "@google/generative-ai": "^0.24.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
