--- a/config/projects.json
+++ b/config/projects.json
@@ -3,31 +3,63 @@
     {
       "title": "TypeScript Floor Plan Generator",
       "link": "https://github.com/Ctechky/Floor-generator",
-      "year": "2025",
-      "description": "Systematic approach to floor plan optimization, formulating space utilization problems and developing data-driven solutions. Analyzes layout constraints and develops optimization algorithms to maximize space efficiency and workflow productivity.",
+      "period": "June 2025 - August 2025",
+      "description": "Built a TypeScript-based floor plan optimizer (Top 10 layouts) with automated DXF export for AutoCAD.",
       "image": "proj_1",
+      "status": "completed"
+    },
+    {
+      "title": "Liquid Organic Hydrogen Carrier (LOHC) - Final Year Project",
+      "link": "https://github.com/cky09002",
+      "period": "December 2025 - 2026",
+      "description": "Lead team to design a 5000 tons green hydrogen storage/transport system using LOHC for Singapore's hydrogen infrastructure.",
+      "image": "proj_2",
       "status": "ongoing"
     },
     {
-      "title": "SC2002 Internship Placement System",
-      "link": "https://github.com/cky09002/SC2002-Internship-Placement-System",
-      "year": "2025",
-      "description": "Data-driven system for internship placement optimization. Formulates matching problems based on student skills and company requirements, using systematic analysis to improve placement efficiency and satisfaction rates.",
+      "title": "AVEVA Software Simulation Competition - MTH Hydrogen Storage System",
+      "link": "https://github.com/cky09002",
+      "period": "January 2025 - June 2025",
+      "description": "Led team of 5 designed a 30% ROI MTH based hydrogen storage system with AVEVA simulations. Integrated PV cells to achieve 20% green / 80% blue hydrogen with carbon storage system.",
       "image": "proj_2",
       "status": "completed"
     },
     {
-      "title": "Image Segmentation - Pytorch Attention U-Net",
+      "title": "Course Allocation System",
+      "link": "https://github.com/cky09002",
+      "period": "October 2025 - November 2025",
+      "description": "Allocated students to assignment teams using round-robin and rule-based systems to maximize diversity.",
+      "image": "proj_2",
+      "status": "completed"
+    },
+    {
+      "title": "SC2002 Internship Placement System",
+      "link": "https://github.com/cky09002/SC2002-Internship-Placement-System",
+      "period": "October 2025 - November 2025",
+      "description": "Developed TUI and GUI using Java OOP for efficient internship matching.",
+      "image": "proj_2",
+      "status": "completed"
+    },
+    {
+      "title": "Southeast Asia Heart Attack Dataset Clustering and Dimensionality Reduction",
+      "link": "https://github.com/cky09002",
+      "period": "October 2025 - November 2025",
+      "description": "Applied K-Means, Gaussian clustering, PCA, ICA, and random projection for data analysis and optimization.",
+      "image": "proj_2",
+      "status": "completed"
+    },
+    {
+      "title": "Semantic Image Segmentation using Attention U-Net Variants",
       "link": "https://github.com/cky09002/Image-Segmentation-Pytorch-Attention-U-Net",
-      "year": "2025",
-      "description": "Systematic approach to image analysis and segmentation. Formulates computer vision problems for automated quality inspection and process monitoring, developing data-driven solutions for manufacturing applications.",
+      "period": "September 2025 - October 2025",
+      "description": "Implemented Attention U-Net models in PyTorch with data augmentation and pretrained encoders for semantic image segmentation.",
       "image": "proj_3",
-      "status": "maintenance"
+      "status": "completed"
     },
     {
       "title": "AIChE NTU Student Chapter Official Website",
       "link": "https://aiche-ntu.github.io/",
-      "year": "2025",
+      "period": "January 2025 - 2026",
       "description": "Modern, responsive website for the American Institute of Chemical Engineers NTU Student Chapter showcasing events, member resources, and chapter activities. Built with HTML, CSS, and JavaScript for optimal performance and accessibility.",
       "image": "aiche_2",
       "status": "ongoing"
@@ -35,7 +67,7 @@
     {
       "title": "SC1003 Battleship Game (Pygame)",
       "link": "https://github.com/cky09002/SC1003--Battleship-Pygame",
-      "year": "2025",
+      "period": "September 2024 - November 2024",
       "description": "Interactive Battleship game built with Pygame featuring AI opponent, graphical interface, and strategic gameplay mechanics.",
       "image": "proj_7",
       "status": "completed"
@@ -43,40 +75,32 @@
     {
       "title": "Pandemic Simulation Game",
       "link": "https://github.com/cky09002/Pandemic-Simulation-Game",
-      "year": "2025",
+      "period": "March 2024 - May 2024",
       "description": "Epidemiological modeling and simulation system. Formulates disease spread dynamics problems using statistical analysis and simulation frameworks to understand and predict pandemic behavior.",
       "image": "proj_8",
       "status": "maintenance"
     },
     {
-      "title": "Covid-19 Data Analytics",
+      "title": "Covid-19 Prediction Analysis",
       "link": "https://github.com/cky09002/Covid-19-data-analytics",
-      "year": "2025",
-      "description": "Comprehensive data analysis project examining COVID-19 trends and patterns. Formulates time-series forecasting problems using statistical modeling and data visualization to extract meaningful insights from pandemic data.",
+      "period": "March 2023 - April 2024",
+      "description": "Built a predictive model to forecast COVID-19 trends and flag high-risk regions for travel safety.",
       "image": "proj_9",
       "status": "completed"
     },
     {
-      "title": "TF2 Deep FloorPlan Recognition",
-      "link": "https://github.com/cky09002/TF2DeepFloorplan",
-      "year": "2025",
-      "description": "Deep learning system for architectural pattern recognition. Formulates computer vision problems using neural networks for automated floor plan analysis and facility management applications.",
-      "image": "proj_10",
-      "status": "archived"
-    },
-    {
-      "title": "OneArena 2024 Robotics Competition",
+      "title": "Robotic Maze Path Planning",
       "link": "https://github.com/cky09002/OneArena-2024",
-      "year": "2024",
-      "description": "Robotic navigation system development for maze solving. Formulates pathfinding optimization problems using systematic algorithms and real-time decision making for autonomous robot control.",
+      "period": "September 2023 - June 2024",
+      "description": "Developed path finding algorithms for autonomous robot navigation.",
       "image": "proj_6",
       "status": "completed"
     },
     {
       "title": "URECA: Optimization of 3D SU-8 Microstructures using Mask-less Lithography",
       "link": "https://github.com/cky09002",
-      "year": "2023-2024",
-      "description": "Process optimization research in semiconductor manufacturing. Formulates lithography parameter optimization problems using systematic data analysis to improve yield and reduce defects in wafer fabrication processes.",
+      "period": "August 2023 - June 2024",
+      "description": "Reduced microstructure size to 27 µm and print time by 30% via automation. Improved wafer fabrication efficiency 20%; enhanced imaging resolution 4× with SEM + oil immersion.",
       "image": "proj_5",
       "status": "completed"
     }
