--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@portabletext/react": "^6.0.2",
+    "@sanity/client": "^7.16.0",
     "@vercel/analytics": "^1.6.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
@@ -21,6 +23,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "baseline-browser-mapping": "^2.10.0",
     "typescript": "^5.7.3",
     "vite": "^7.1.9"
   }
